--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,18 +22,18 @@ jobs:
           echo "IMAGE_TAG=1.${{ env.GITHUB_RUN_NUMBER }}" >> $GITHUB_ENV
           
       - name: Build Docker image
-        run: docker build . --file Dockerfile --tag pacman-game:$IMAGE_TAG
+        run: docker build . --file Dockerfile --tag pacman-game:${{ env.IMAGE_TAG }}
         
       - name: Security Scan with Trivy
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: pacman-game:$IMAGE_TAG
+          image-ref: pacman-game:${{ env.IMAGE_TAG }}
           exit-code: '1'
           severity: 'CRITICAL,HIGH'   
           
       - name: Push Docker image to Docker Hub
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
-          docker tag pacman-game:$IMAGE_TAG ${{ secrets.DOCKERHUB_USERNAME }}/pacman-game:$IMAGE_TAG
+          docker tag pacman-game:${{ env.IMAGE_TAG }} ${{ secrets.DOCKERHUB_USERNAME }}/pacman-game:${{ env.IMAGE_TAG }}
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/pacman-game:$IMAGE_TAG
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/pacman-game:${{ env.IMAGE_TAG }}
